# StereoMolGraph

./: .gitignore  .test_commit.txt  CHANGELOG.md  CITATION.cff  LICENSE  README.md  cython_test.ipynb  git push  pixi.toml  pyproject.toml  readthedocs.yaml  setup.py  test.ipynb  test_color_refine.ipynb
.github/workflows/: pytest_coverage_comment.yaml  release_pypi.yaml  run_example_test.yaml  run_test.yaml  run_test.yml  run_type_check.yaml  run_unit_test.yaml
doc/source/: conf.py  index.rst  installation.rst  ipython.rst  theory.md
doc/source/reference/: graph.rst  stereodescriptors.rst
docs/: conf.py  getting_started.rst  glucose.ipynb  index.rst  installation.rst  interoperability_rdkit.rst  ipython.rst  phosgenation.ipynb  rdkit_interoperability.rst  requirements.txt  theory.md  visualization.ipynb  werner.ipynb
docs/notebooks/: visualization.ipynb
docs/reference/: algorithms.rst  cartesian.rst  condensedreactiongraph.rst  coords.rst  experimental.rst  graph.rst  graph2rdmol.rst  index.rst  ipython.rst  molgraph.rst  periodic_table.rst  rdmol2graph.rst  stereocondensedreactiongraph.rst  stereodescriptors.rst  stereomolgraph.rst
docs/reference/algorithms/: bond_orders.rst  color_refine.rst  index.rst  isomorphism.rst
docs/reference/graphs/: condensedreactiongraph.rst  graphs_overview.rst  index.rst  molgraph.rst  stereocondensedreactiongraph.rst  stereomolgraph.rst
docs/theory/: index.rst
docs/tutorial/: geo.ipynb  index.rst  rdkit.ipynb
examples/: TS_cis.xyz  TS_trans.xyz  color_refine.ipynb  compare.ipynb  compare_molecules.ipynb  inchi_fail.ipynb  phosgenation.ipynb  prod.xyz  react.xyz  react_stereoiso.ipynb  stereoiso.ipynb  test.ipynb  test_lone_pair.ipynb  twistane.ipynb  visualization.ipynb  werner.ipynb
src/stereomolgraph/: __init__.py  atrop_test.ipynb  canon_new.ipynb  canonical.ipynb  cartesian.py  coords.py  experimental.py  graph.py  graph2rdmol.py  ipython.py  periodic_table.py  periodictable.py  rdmol2graph.py  stereodescriptors.py  try_numba.ipynb  xyz2graph.py
src/stereomolgraph/algorithms/: _color_refine.py  _reaction_fingerprint.py  bond_orders.py  circular.py  color_refine.py  fingerprints.py  hash.py  isomorphism.py  rot_sym.ipynb
src/stereomolgraph/experimental/: __init__.py  _canon.py  _isomers.py  _json.py  _pandas_patcher.py  _sym_num.py  _sym_num2.py  _sym_num_old.py  _top_sym_num.py  atom_invariants.ipynb  bond_sym.py  canon.py  kinbot_fail_si.csv  kinbot_fail_si.html  kinbot_si.csv  kinbot_si_broken.txt  new_stereodescriptors.py  old_ext_sym_num.py  sigma_si-investigation.html  sigma_si-smg-vs-sigma.html  sigma_si.csv  sym_num_notebook.ipynb  test.ipynb  test_canon.ipynb  test_canon_chiral.ipynb  test_canon_topo.ipynb
src/stereomolgraph/graphs/: __init__.py  crg.py  mg.py  scrg.py  smg.py
tests/: conftest.py  test_cartesian.py  test_examples.py  test_graph.py
tests/algorithms/: test_isomorphism.py
tests/data/: (Z)-(4R)-3,4-Dichlor-2-pentene.xyz  enantiomer_geos.xyz  fluoro_chloro_bromomethane_s.xyz
tests/data/conrot_reaction/: (Z)-(4S)-3,4-Dichlor-2-pentene.xyz  ts.xyz
tests/data/disrot_reaction/: (Z)-(4S)-3,4-Dichlor-2-pentene.xyz
tests/hypothesis/: test_roundtrip.py
tests/unit/: conftest.py  test_consistency.py  test_coords.py  test_graph.py  test_hash.py  test_isomers.py  test_json_handler.py  test_sym_num.py
tests/unit/algorithms/: test_canon.py  test_fingerprints.py
tests/unit/data/: (E)-(4S)-3,4-Dichlor-2-pentene.xyz  PCl5.xyz  caffeine.xyz  orca_NEB-TS_converged.xyz  (+7 more)
workflows/: run_test.yml
(+3 files in other folders)
