[build-system]
requires = ["setuptools >= 70.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
stereomolgraph = ["py.typed"]

[project]
name = "StereoMolGraph"
version = "0.0.18b"
readme = "README.md"
requires-python = ">=3.10"

description = "A graph library for chiral molecules, reactions and transition states"
keywords = [
    "chemistry",
    "reaction",
    "graph",
    "molecule",
    "transition state",
]
maintainers = [
  {name = "Maxim Papusha", email = "maxim.papusha@ltt.rwth-aachen.de"}
]
authors = [
  {name = "Maxim Papusha", email = "maxim.papusha@ltt.rwth-aachen.de"},
  {name = "Florian Solbach", email = "florian.solbach@ltt.rwth-aachen.de"}, 
]

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Science/Research", 

  "License :: OSI Approved :: MIT License",
  
  "Operating System :: OS Independent",

  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "numpy>=1.20,<3",
  "rdkit>=2022.9.1",
  "typing-extensions",
]

[project.optional-dependencies]
docs = ["rdkit>=2022.9.1,<2025",
       "sphinx>=8.2,<9;python_version>='3.11'",
       "pydata-sphinx-theme",
       "myst-nb",
       "sphinx-autodoc-typehints",
       "sphinx-copybutton",
       "sphinx-design"]

dev = ["pytest>=7.1.2",
       "hypothesis",
       "nbclient",
       "nbformat",
       "ruff>=0.6.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    ]
markers = [
    "unit: marks unit tests (deselect with '-m \"not unit\"')",
    "example: marks testing of examples folder (deselect with '-m \"not example\"')",
    "hypothesis: marks property based testing with hypothesis (deselect with '-m \"not hypothesis\"')",
]

[tool.ruff.lint]
select = ["E", "F", "UP035", "W291","F541"]

[tool.ruff.format]
docstring-code-format = true

[project.urls]
Documentation = "https://stereomolgraph.readthedocs.io/"
Repository = "https://github.com/maxim-papusha/StereoMolGraph.git"
PyPi = "https://pypi.org/project/StereoMolGraph/"
Zenodo = "https://doi.org/10.5281/zenodo.16360310"
Publication = "https://doi.org/10.1021/acs.jcim.5c02523"